# uisp_mikrotik_address_list_sync

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  constants.py  docker-compose.yaml  job.py  performance_comparison.py  pyproject.toml  pytest.ini  run_tests.py  uisp.ini.example  uisp_mikrotik_address_list_sync.py
classes/: __init__.py  mikrotik.py  uisp.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_classes.py  test_integration.py  test_mikrotik_api.py  test_uisp_api.py  test_utils.py
utils/: __init__.py  base.py  mikrotik.py  uisp.py
